# component-email-content

./: .pre-commit-config.yaml  Dockerfile  README.md  bitbucket-pipelines.yml  deploy-kds-team.ex-ms-outlook-email-content.sh  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  configuration_description.md  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
component_config_ms_outlook/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json
docs/: imap-search.md
scripts/: build_n_test.sh  update_dev_portal_properties.sh  update_dev_portal_properties_ms_outlook.sh
scripts/developer_portal/: fn_actions_md_update.sh  update_properties.sh
src/: component.py  configuration.py  graph_client.py  imap_client.py
tests/: test_component.py
