[project]
name = "component-email-content"
dynamic = ["version"]
requires-python = "~=3.13.0"
dependencies = [
    "freezegun>=1.5.5",
    "imap-tools>=1.11.0",
    "keboola-component>=1.6.13",
    "keboola-utils>=1.1.0",
    "mock>=5.2.0",
    "msal>=1.34.0",
    "pydantic>=2.11.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.3",
    "ruff>=0.11.5",
    "ty>=0.0.24",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I",   # isort – import sorting
    "UP",  # pyupgrade – modern Python syntax
]

[tool.ty.environment]
extra-paths = ["src"]
